--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -12,8 +12,8 @@ Float is an \us primitive to represent floating point number.
 \subsection{Construction}
 
 The most common way to create fresh floats is by using the literal
-syntax presented in \autoref{sec:us-syn-lit-float}. A null float can also be
-obtained with \lstinline|Float|'s \lstinline|new| method.
+syntax presented in \autoref{sec:us-syn-lit-float}. A null float can
+also be obtained with \lstinline|Float|'s \lstinline|new| method.
 
 \begin{urbiscript}
 Float.new;
@@ -22,75 +22,55 @@ Float.new;
 
 \subsection{Methods}
 
-\subsubsection{Float.abs}
-
-Return the absolute value of the target.
-
+\begin{itemize}
+\item \lstinline|abs|\\
+  Absolute value of the target.
 \begin{urbiscript}
-(-5).abs;
-[00000000] 5
-(5).abs;
-[00000000] 5
+assert_eq((-5).abs, 5);
+assert_eq(  0 .abs, 0);
+assert_eq(  5 .abs, 5);
 \end{urbiscript}
 
-\subsubsection{Float.acos}
-
-Return the arccosine of the target.
-
+\item \lstinline|acos|\\
+  Arccosine of the target.
 \begin{urbiscript}
-1.acos;
-[00000000] 0
+assert_eq(0.acos, pi/2);
+assert_eq(1.acos, 0);
 \end{urbiscript}
 
-\subsubsection{Float.asin}
-
-Return the arcsine of the target.
-
+\item \lstinline|asin|\\
+  Arcsine of the target.
 \begin{urbiscript}
-0.asin;
-[00000000] 0
+assert_eq(0.asin, 0);
 \end{urbiscript}
 
-\subsubsection{Float.asString}
-
-Return a string representing the target.
-
+\item \lstinline|asString|\\
+  Return a string representing the target.
 \begin{urbiscript}
-42.asString;
-[00000000] "42"
+assert_eq(42.asString, "42");
 \end{urbiscript}
 
-\subsubsection{Float.atan}
-
-Return the arctangent of the target.
-
+\item \lstinline|atan|\\
+  Return the arctangent of the target.
 \begin{urbiscript}
-0.atan;
-[00000000] 0
+assert_eq(0.atan, 0);
+assert_eq(1.atan, pi/4);
 \end{urbiscript}
 
-\subsubsection{Float.bitand}
-
-Return the bitwise and between the target and the argument.
-
+\item \lstinline|'bitand'(\var{that})|\\
+  The bitwise-and between \lstinline|this| and \var{that}.
 \begin{urbiscript}
-3 bitand 6;
-[00000000] 2
+assert_eq(3 bitand 6, 2);
 \end{urbiscript}
 
-\subsubsection{Float.bitor}
-
-Return the bitwise or between the target and the argument.
-
+\item \lstinline|'bitor'(\var{that})|\\
+  Bitwise-or between \lstinline|this| and \var{that}.
 \begin{urbiscript}
-3 bitor 6;
-[00000000] 7
+assert_eq(3 bitor 6, 7);
 \end{urbiscript}
 
-\subsubsection{Float.clone}
-
-Return a fresh Float with the same value as the target.
-
+\item \lstinline|clone|\\
+  Return a fresh Float with the same value as the target.
 \begin{urbiscript}
 var x = 0;
 [00000000] 0
@@ -100,297 +80,211 @@ x === y;
 [00000000] false
 \end{urbiscript}
 
-\subsubsection{Float.compl}
-
-Return the 1-complement of the target.
-
+\item \lstinline|compl|\\
+  The complement to 1 of the target.
 \begin{urbiscript}
-compl 0;
-[00000000] 4294967295
-compl 4294967295;
-[00000000] 0
+assert_eq(compl 0, 4294967295);
+assert_eq(compl 4294967295, 0);
 \end{urbiscript}
 
-\subsubsection{Float.cos}
-
-Return the cosine of the target.
-
+\item \lstinline|cos|\\
+  Cosine of the target.
 \begin{urbiscript}
-0.cos;
-[00000000] 1
+assert_eq(0.cos, 1);
+assert_eq(pi.cos, -1);
 \end{urbiscript}
 
-\subsubsection{Float.exp}
-
-Return the exponential of the target.
-
+\item \lstinline|exp|\\
+  Exponential of the target.
 \begin{urbiscript}
 1.exp;
 [00000000] 2.71828
 \end{urbiscript}
 
-\subsubsection{Float.inf}
-
-Return the infinity.
-
+\item \lstinline|inf|\\
+  Return the infinity.
 \begin{urbiscript}
 Float.inf;
 [00000000] inf
 \end{urbiscript}
 
-\subsubsection{Float.log}
-
-Return the logarithm of the target.
-
+\item \lstinline|log|\\
+  The logarithm of the target.
 \begin{urbiscript}
-2.71828.log;
-[00000000] 0.999999
+assert_eq(0.log, -inf);
+assert_eq(1.log, 0);
+assert_eq(1.exp.log, 1);
 \end{urbiscript}
 
-\subsubsection{Float.nan}
-
-Return the ``not a number'' special float value.
-
+\item \lstinline|nan|\\
+  The ``not a number'' special float value.
 \begin{urbiscript}
 Float.nan;
 [00000000] nan
 \end{urbiscript}
 
-\subsubsection{Float.random}
-
-Return a random number between 0 and the target.
-
+\item \lstinline|random|\\
+  A random integer between 0 and the target.
 \begin{urbiscript}
-5.random;
-[00000000] 3
-5.random;
-[00000000] 1
-5.random;
-[00000000] 2
+for (3)
+  echo (5.random);
+[00000000] *** 3
+[00000000] *** 1
+[00000000] *** 2
 \end{urbiscript}
 
-\subsubsection{Float.round}
-
-Return the target, rounded.
-
+\item \lstinline|round|\\
+  The target, rounded.
 \begin{urbiscript}
-1.6.round;
-[00000000] 2
-1.4.round;
-[00000000] 1
+assert_eq(1.6.round, 2);
+assert_eq(1.4.round, 1);
 \end{urbiscript}
 
-\subsubsection{Float.seq}
-
-Return the sequence of integer from 0 to target - 1 as a list.
-
+\item \lstinline|seq|\\
+  The sequence of integers from 0 to \lstinline|this| - 1 as a list.
 \begin{urbiscript}
-3.seq;
-[00000000] [0, 1, 2]
+assert_eq(3.seq, [0, 1, 2]);
 \end{urbiscript}
 
-\subsubsection{Float.sin}
-
-Return the sinus of the target.
-
+\item \lstinline|sin|\\
+  The sine of the target.
 \begin{urbiscript}
-0.sin;
-[00000000] 0
+assert_eq(0.sin, 0);
 \end{urbiscript}
 
-\subsubsection{Float.sqrt}
-
-Return the square root of the target.
-
+\item \lstinline|sqrt|\\
+  The square root of the target.
 \begin{urbiscript}
-1024.sqrt;
-[00000000] 32
+assert (1024.sqrt == 32);
 \end{urbiscript}
 
-\subsubsection{Float.tan}
-
-Return the tangent of the target.
-
-\begin{urbiscript}[caption=Float.tan, label=lst:float-tan]
-0.tan;
-[00000000] 0
-\end{urbiscript}
-
-\subsubsection{Float.trunc}
-
-Return the target truncated.
-
+\item \lstinline|tan|\\
+  Tangent of the target.
 \begin{urbiscript}
-1.9.trunc;
+assert_eq(0.tan, 0);
+(pi/4).tan;
 [00000000] 1
 \end{urbiscript}
 
-\subsubsection{Float.asFloat}
-
-Return the target.
-
+\item \lstinline|trunc|\\
+  Return the target truncated.
 \begin{urbiscript}
-51.asFloat;
-[00000000] 51
+assert_eq(1.9.trunc, 1);
+assert_eq((-1.9).trunc, -1);
 \end{urbiscript}
 
-\subsubsection{Float.sqr}
-
-Return the square of the target.
-
+\item \lstinline|asFloat|\\
+  Return the target.
 \begin{urbiscript}
-32.sqr;
-[00000000] 1024
+assert_eq(51.asFloat, 51);
 \end{urbiscript}
 
-\subsubsection{Float.sgn}
-
-Return 1 if the target is positive, -1 otherwise.
-
+\item \lstinline|sqr|\\
+  Square of the target.
 \begin{urbiscript}
-(-1164).sgn;
-[00000000] -1
-(1164).sgn;
-[00000000] 1
+assert_eq(32.sqr, 1024);
 \end{urbiscript}
 
-\subsubsection{Float.times}
+\item \lstinline|sgn|\\
+  Return 1 if \lstinline|this| is positive, 0 if it is null, -1
+  otherwise.
+\begin{urbiscript}
+assert_eq((-1164).sgn, -1);
+assert_eq(0.sgn      , 0);
+assert_eq((1164).sgn , 1);
+\end{urbiscript}
 
-Take one functional argument and call it target times.
+\item \lstinline|times(\var{fun})|\\
+  Call the functional argument \var{fun} \lstinline|this| times.
 
 \begin{urbiscript}
-5.times(function () { echo("ping")});
-[00000000] *** ping
-[00000000] *** ping
+3.times(function () { echo("ping")});
 [00000000] *** ping
 [00000000] *** ping
 [00000000] *** ping
 \end{urbiscript}
 
-\subsubsection{Float.each}
-
-Take one functional argument and call it on every integer from 0 to
-target - 1.
-
+\item \lstinline|each(\var{fun})|\\
+  Call the functional argument \var{fun} on every integer from 0 to
+  target - 1.
 \begin{urbiscript}
-5.each(function (i) { echo(i * 2)});
+3.each(function (i) { echo(i * 2) });
 [00000000] *** 0
 [00000000] *** 2
 [00000000] *** 4
-[00000000] *** 6
-[00000000] *** 8
 \end{urbiscript}
 
-\subsubsection{Float.\^{}}
-
-Return the bitwise exclusive or between the target and the first argument.
-
+\item \lstinline|'^'(\var{that})|\\
+  Bitwise exclusive or between \lstinline|this| and \var{that}.
 \begin{urbiscript}
-3 ^ 6;
-[00000000] 5
+assert_eq(3 ^ 6, 5);
 \end{urbiscript}
 
-\subsubsection{Float.\textgreater\textgreater}
-
-\lstinline|a >> b| return the \lstinline|a| shifted by \lstinline|b|
-bit towards the right.
-
+\item \lstinline|'>>'(\var{that})|\\%>>
+  \lstinline|this| shifted by \var{that} bits towards the right.
 \begin{urbiscript}
-4 >> 2;
-[00000000] 1
+assert_eq(4 >> 2, 1);
 \end{urbiscript}
 
-\subsubsection{Float.\textless}
-
-\lstinline|a < b| returns whether \lstinline|a| is inferior to
-\lstinline|b|. Note that other comparison operators
-(\lstinline|<=|, \lstinline|>|, \ldots) can thus also be applied on
-floats since Float inherits \refObject{Orderable}.
-
+\item \lstinline|'<'(\var{that})|\\
+  Whether \lstinline|this| is less than \var{b}. The other comparison
+  operators (\lstinline|<=|, \lstinline|>|, \ldots) can thus also be
+  applied on floats since Float inherits \refObject{Orderable}.
 \begin{urbiscript}
-0 < 1;
-[00000000] true
-1 < 0;
-[00000000] false
+assert(  0 < 1);
+assert(!(1 < 0));
 \end{urbiscript}
 
-\subsubsection{Float.\textless\textless}
-
-\lstinline|a << b| return the \lstinline|a| shifted by \lstinline|b|
-bit towards the left.
-
+\item \lstinline|'<<'(\var{that})|\\
+  \lstinline|this| shifted by \var{that} bit towards the left.
 \begin{urbiscript}
-4 << 2;
-[00000000] 16
+assert_eq(4 << 2, 16);
 \end{urbiscript}
 
-\subsubsection{Float.$-$}
-
-\lstinline|a - b| returns \lstinline|a| minus \lstinline|b|.
-
+\item \lstinline|'-'(\var{that})|\\
+  \lstinline|this| subtracted by \var{b}.
 \begin{urbiscript}
-6 - 3;
-[00000000] 3
+assert_eq(6 - 3, 3);
 \end{urbiscript}
 
-\subsubsection{Float.+}
-
-\lstinline|a + b| returns \lstinline|a| plus \lstinline|b|.
-
+\item \lstinline|'+'(\var{that})|\\
+  The sum of \lstinline|this| and \var{that}.
 \begin{urbiscript}
-1 + 1;
-[00000000] 2
+assert_eq(1 + 1, 2);
 \end{urbiscript}
 
-\subsubsection{Float./}
-
-\lstinline|a / b| returns the quotient of \lstinline|a| divided by
-\lstinline|b|.
-
+\item \lstinline|'/'(\var{that})|\\
+  The quotient of \lstinline|this| divided by \var{that}.
 \begin{urbiscript}
-50 / 10;
-[00000000] 5
+assert_eq(50 / 10, 5);
+assert_eq(10 / 50, 0.2);
 \end{urbiscript}
 
-\subsubsection{Float.\%}
-
-\lstinline|a % b|
-returns \lstinline|a| modulo \lstinline|b|.
-
+\item \lstinline|'%'(\var{that})|\\
+  \lstinline|this| modulo \var{b}.
 \begin{urbiscript}
-50 % 11;
-[00000000] 6
+assert_eq(50 % 11, 6);
 \end{urbiscript}
 
-\subsubsection{Float.*}
-
-\lstinline|a * b| returns the product of \lstinline|a| by
-\lstinline|b|.
-
+\item \lstinline|'*'(\var{that})|\\
+  Product of \lstinline|this| by \var{that}.
 \begin{urbiscript}
-2 * 3;
-[00000000] 6
+assert_eq(2 * 3, 6);
 \end{urbiscript}
 
-\subsubsection{Float.**}
-
-\lstinline|a ** b| returns \lstinline|a| to the \lstinline|b| power.
-
+\item \lstinline|'**'(\var{that})|\\
+  \lstinline|this| to the \var{that} power (${this}^{that}$).
 \begin{urbiscript}
-2 ** 10;
-[00000000] 1024
+assert_eq(2 ** 10, 1024);
 \end{urbiscript}
 
-\subsubsection{Float.==}
-
-\lstinline|a == b| returns whether \lstinline|a| equals \lstinline|b|.
-
+\item \lstinline|'=='(\var{that})|\\
+  Whether \lstinline|this| equals \var{that}.
 \begin{urbiscript}
-1 == 1;
-[00000000] true
-1 == 2;
-[00000000] false
+assert(  1 == 1);
+assert(!(1 == 2));
 \end{urbiscript}
+\end{itemize}
 
 %%% Local Variables:
 %%% mode: latex
