--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -45,7 +45,7 @@ predicate.
 Return whether at least one of the members of the target verify the
 given predicate.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 // Is there any even element?
 [-3, 1, -1].all(function (e) { e % 2 == 0 });
 [00000000] false
@@ -58,7 +58,7 @@ given predicate.
 
 Return the target.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].asList;
 [00000000] [0, 1, 2]
 \end{urbiscript}
@@ -67,7 +67,7 @@ Return the target.
 
 Return the target as a string describing the list.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].asString;
 [00000000] "[0, 1, 2]"
 \end{urbiscript}
@@ -76,7 +76,7 @@ Return the target as a string describing the list.
 
 Return the last element of the target. An error if the target is empty.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].back;
 [00000000] 2
 [].back;
@@ -87,7 +87,7 @@ Return the last element of the target. An error if the target is empty.
 
 Empty the target.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 var x = [0, 1, 2];
 [00000000] [0, 1, 2]
 x.clear;
@@ -98,7 +98,7 @@ x.clear;
 
 Apply the given functional value on all members sequentially.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].each(function (v) {echo (v * v); echo (v * v)});
 [00000000] *** 0
 [00000000] *** 0
@@ -112,7 +112,7 @@ Apply the given functional value on all members sequentially.
 
 Apply the given functional value on all members simultaneously.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].'each&'(function (v) {echo (v * v); echo (v * v)});
 [00000000] *** 0
 [00000000] *** 1
@@ -126,7 +126,7 @@ Apply the given functional value on all members simultaneously.
 
 Return whether the target is empty.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [].empty;
 [00000000] true
 [1].empty;
@@ -138,7 +138,7 @@ Return whether the target is empty.
 Return the list of all member of the target that verify the given
 predicate.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 // Keep only odd numbers
 [0, 1, 2, 3, 4, 5].filter(function (v) {v % 2 == 1});
 [00000000] [1, 3, 5]
@@ -148,7 +148,7 @@ predicate.
 
 \fixme{This is too damn hard to explain, yet so simple.}
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 
 \end{urbiscript}
 
@@ -158,7 +158,7 @@ predicate.
 Return the first element of the target. An error if the target is
 empty.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].front;
 [00000000] 0
 [].front;
@@ -169,7 +169,7 @@ empty.
 
 Return whether one of the member of the target equals the argument.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].has(1);
 [00000000] true
 [0, 1, 2].has(5);
@@ -181,12 +181,12 @@ Return whether one of the member of the target equals the argument.
 Return whether one of the member of the target is physically equal to
 the argument.
 
-\begin{urbiscript}
-var x = 1;
+\begin{urbiscript}[firstnumber=last]
+var y = 1;
 [00000000:hide] 1
-[0, x, 2].hasSame(1);
+[0, y, 2].hasSame(1);
 [00000000] false
-[0, x, 2].hasSame(x);
+[0, y, 2].hasSame(y);
 [00000000] true
 \end{urbiscript}
 
@@ -199,7 +199,7 @@ Synonym for \lstinline|front| (\autoref{sec:std-list-front}).
 Concatenate all members of the target to form a string, separating
 them with the given separator.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 ["b", "ob", "b"].join("a");
 [00000000] "baobab"
 \end{urbiscript}
@@ -209,7 +209,7 @@ them with the given separator.
 Apply the given functional value on every member, and return the list
 of results.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2, 3].map(function (v) { v % 2 == 0});
 [00000000] [true, false, true, false]
 \end{urbiscript}
@@ -220,9 +220,9 @@ of results.
 Return the nth member of the target (indexing is zero-based). An error
 if out of bounds.
 
-%\begin{urbiscript}[caption={\lstinline|List.'\[\]'|},
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.'\[\]'|},
 %label=lst:list-nth]
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 var l = [0, 1, 2];
 [00000000:hide] [0, 1, 2]
 l[1];
@@ -236,12 +236,12 @@ l[3];
 Remove and return the last element of the target. An error if the
 target is empty.
 
-\begin{urbiscript}
-var x = [0, 1, 2];
+\begin{urbiscript}[firstnumber=last]
+var t = [0, 1, 2];
 [00000000] [0, 1, 2]
-x.removeBack;
+t.removeBack;
 [00000000] 2
-x;
+t;
 [00000000] [0, 1]
 [].removeBack;
 [00000000:error] !!! removeBack: cannot be applied onto empty list
@@ -252,12 +252,12 @@ x;
 Remove and return the first element from the target. An error if the
 target is empty.
 
-\begin{urbiscript}
-var x = [0, 1, 2];
+\begin{urbiscript}[firstnumber=last]
+var g = [0, 1, 2];
 [00000000] [0, 1, 2]
-x.removeFront;
+g.removeFront;
 [00000000] 0
-x;
+g;
 [00000000] [1, 2]
 [].removeFront;
 [00000000:error] !!! removeFront: cannot be applied onto empty list
@@ -268,12 +268,12 @@ x;
 
 Insert the given element at the end of the target.
 
-\begin{urbiscript}
-var x = [0, 1];
+\begin{urbiscript}[firstnumber=last]
+var z = [0, 1];
 [00000000] [0, 1]
-x.insertBack(2);
+z.insertBack(2);
 [00000000] [0, 1, 2]
-x;
+z;
 [00000000] [0, 1, 2]
 \end{urbiscript}
 
@@ -281,12 +281,12 @@ x;
 
 Insert the given element at the beginning of the target.
 
-\begin{urbiscript}
-var x = [1, 2];
+\begin{urbiscript}[firstnumber=last]
+var a = [1, 2];
 [00000000] [1, 2]
-x.insertFront(0);
+a.insertFront(0);
 [00000000] [0, 1, 2]
-x;
+a;
 [00000000] [0, 1, 2]
 \end{urbiscript}
 
@@ -295,7 +295,7 @@ x;
 Return a sub-range of the string, from the first index included to the
 second index excluded. An error if out of bounds.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2, 3].range(1, 3);
 [00000000] [1, 2]
 [].range(1, 3);
@@ -307,12 +307,12 @@ second index excluded. An error if out of bounds.
 
 Remove all elements from the target that equals the argument.
 
-\begin{urbiscript}
-var x = [0, 1, 0, 2, 0, 3];
+\begin{urbiscript}[firstnumber=last]
+var c = [0, 1, 0, 2, 0, 3];
 [00000000] [0, 1, 0, 2, 0, 3]
-x.remove(0);
+c.remove(0);
 [00000000] [1, 2, 3]
-x;
+c;
 [00000000] [1, 2, 3]
 \end{urbiscript}
 
@@ -321,14 +321,14 @@ x;
 Remove all elements from the target that physically equals the
 argument.
 
-\begin{urbiscript}
-var x = 1;
+\begin{urbiscript}[firstnumber=last]
+var d = 1;
 [00000000] 1
-var l = [0, 1, x, 1, 2];
+var e = [0, 1, d, 1, 2];
 [00000000] [0, 1, 1, 1, 2]
-l.removeById(x);
+e.removeById(d);
 [00000000] [0, 1, 1, 2]
-l;
+e;
 [00000000] [0, 1, 1, 2]
 \end{urbiscript}
 
@@ -336,7 +336,7 @@ l;
 
 Return the target with the order of elements inverted.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].reverse;
 [00000000] [2, 1, 0]
 \end{urbiscript}
@@ -346,8 +346,8 @@ Return the target with the order of elements inverted.
 Check whether all elements in the target and the first argument, are
 equal two by two.
 
-%\begin{urbiscript}[caption={\lstinline|List.==|}, label=lst:list-sameAs]
-\begin{urbiscript}
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.==|}, label=lst:list-sameAs]
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2] == [0, 1, 2];
 [00000000] true
 [0, 1, 2] == [0, 0, 2];
@@ -359,13 +359,13 @@ equal two by two.
 
 Assign a value to the element of the target at the given index.
 
-%\begin{urbiscript}[caption={\lstinline|List.'\[\]='|}, label=lst:list-setNth]
-\begin{urbiscript}
-var x = [0, 1, 2];
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.'\[\]='|}, label=lst:list-setNth]
+\begin{urbiscript}[firstnumber=last]
+var f = [0, 1, 2];
 [00000000] [0, 1, 2]
-x[1] = 42;
+f[1] = 42;
 [00000000] 42
-x;
+f;
 [00000000] [0, 42, 2]
 \end{urbiscript}
 
@@ -373,7 +373,7 @@ x;
 
 Return the number of elements in the target.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [1, 2, 3].size;
 [00000000] 3
 [].size;
@@ -384,7 +384,7 @@ Return the number of elements in the target.
 
 Return the target, sorted with respect to the \lstinline|<| criteria.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [1, 0, 3, 2].sort;
 [00000000] [0, 1, 2, 3]
 \end{urbiscript}
@@ -394,7 +394,7 @@ Return the target, sorted with respect to the \lstinline|<| criteria.
 Return the target, minus the first element. An error if the target is
 empty.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2].tail;
 [00000000] [1, 2]
 [].tail;
@@ -406,8 +406,8 @@ empty.
 Return the target, concatenated n times to itself, n being the
 argument.
 
-%\begin{urbiscript}[caption={\lstinline|List.'*'|}, label=lst:list-times]
-\begin{urbiscript}
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.'*'|}, label=lst:list-times]
+\begin{urbiscript}[firstnumber=last]
 [0, 1] * 3;
 [00000000] [0, 1, 0, 1, 0, 1]
 \end{urbiscript}
@@ -416,8 +416,8 @@ argument.
 
 Return the concatenation of the target and the given list.
 
-%\begin{urbiscript}[caption={\lstinline|List.'+'|}, label=lst:list-plus,
-\begin{urbiscript}
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.'+'|}, label=lst:list-plus,
+\begin{urbiscript}[firstnumber=last]
 [0, 1] + [2, 3];
 [00000000] [0, 1, 2, 3]
 \end{urbiscript}
@@ -427,8 +427,8 @@ Return the concatenation of the target and the given list.
 Return the target without all element that equals any element in the
 given list.
 
-%\begin{urbiscript}[caption={\lstinline|List.'-'|}, label=lst:list-minus,
-\begin{urbiscript}
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.'-'|}, label=lst:list-minus,
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 0, 2, 3] - [1, 2];
 [00000000] [0, 0, 3]
 \end{urbiscript}
@@ -443,8 +443,8 @@ Return whether the target is inferior to the given list. A list is
 inferior to another if at least one of its element differs from the
 other, and the first differing element is inferior to the other.
 
-%\begin{urbiscript}[caption={\lstinline|List.'<'|}, label=lst:list-inf,
-\begin{urbiscript}
+%\begin{urbiscript}[firstnumber=last][caption={\lstinline|List.'<'|}, label=lst:list-inf,
+\begin{urbiscript}[firstnumber=last]
 [0, 1, 2] < [0, 1, 2];
 [00000000] false
 [0, 1, 2] < [0, 0, 2];
